# stdf-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  tarpaulin-report.html
scripts/: example.rs  sync_codeowners.rs
src/: lib.rs
tests/: stdf_endian_tests.rs
