[package]
name = "stdf-rs"
version = "0.0.0"
authors = ["@nerohmot <thor@Semi-ATE.com>"]
edition = "2021"
description = "A Rust library for working with STDF files."
homepage = "https://example.com"
repository = "https://github.com/nerohmot/stdf-rs"
documentation = "https://docs.rs/stdf-rs"
readme = "README.md"
keywords = ["stdf", "semiconductor", "data"]
categories = ["data-processing", "file-format"]
license = "MIT"
exclude = ["target", "test/data"]
include = ["src", "Cargo.toml"]
publish = true
metadata = { custom-field = "custom-value" }

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
lazy_static = "1.4.0"
inotify = "0.11.0"
rand = "0.8"
rand_distr = "0.4"
toml = "0.8.19"

[dev-dependencies]
tempfile = "3.2"

[[bin]]
name = "stdf_endian"
path = "src/bin/stdf_endian.rs"